Inserindo nova rota de estatisticas
